RESOLVED FIXED152266
Frequent crash under -[WKPDFView web_setMinimumSize:]_block_invoke
https://bugs.webkit.org/show_bug.cgi?id=152266
Summary Frequent crash under -[WKPDFView web_setMinimumSize:]_block_invoke
Tim Horton
Reported 2015-12-14 13:05:14 PST
Frequent crash under -[WKPDFView web_setMinimumSize:]_block_invoke
Attachments
Patch (10.24 KB, patch)
2015-12-14 13:05 PST, Tim Horton
no flags
Tim Horton
Comment 1 2015-12-14 13:05:41 PST
WebKit Commit Bot
Comment 2 2015-12-14 14:12:26 PST
Comment on attachment 267317 [details] Patch Clearing flags on attachment: 267317 Committed r194060: <http://trac.webkit.org/changeset/194060>
WebKit Commit Bot
Comment 3 2015-12-14 14:12:29 PST
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 4 2016-02-01 16:06:43 PST
*** Bug 153775 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.