Source/WebKit2/UIProcess/ios/WKPDFView.mm
@@ -219,16 +219,11 @@ typedef struct {
 
     [self _computePageAndDocumentFrames];
 
-    // FIXME: This dispatch_async is unnecessary except to work around rdar://problem/15035620.
-    // Once that is resolved, we should do the setContentOffset without the dispatch_async.
-    RetainPtr<WKPDFView> retainedSelf = self;
-    dispatch_async(dispatch_get_main_queue(), [retainedSelf, oldDocumentLeftFraction, oldDocumentTopFraction] {
-        CGSize contentSize = retainedSelf->_scrollView.contentSize;
-        UIEdgeInsets contentInset = retainedSelf->_scrollView.contentInset;
-        [retainedSelf->_scrollView setContentOffset:CGPointMake((oldDocumentLeftFraction * contentSize.width) - contentInset.left, (oldDocumentTopFraction * contentSize.height) - contentInset.top) animated:NO];
+    CGSize newContentSize = _scrollView.contentSize;
+    UIEdgeInsets contentInset = _scrollView.contentInset;
+    [_scrollView setContentOffset:CGPointMake((oldDocumentLeftFraction * newContentSize.width) - contentInset.left, (oldDocumentTopFraction * newContentSize.height) - contentInset.top) animated:NO];
 
-        [retainedSelf _revalidateViews];
-    });
+    [self _revalidateViews];
 }
 
 - (void)scrollViewDidScroll:(UIScrollView *)scrollView
